--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,4 @@
-body{margin:0;font-family:Rubik,sans-serif}
+body{margin:0;font-family:Rubik,sans-serif;overflow-x:hidden;}
 .w100{width:100%;height:auto}
 .relative{position:relative}
 .swiper{width:100%;height:100vh}
@@ -11,7 +11,46 @@ body{margin:0;font-family:Rubik,sans-serif}
 .slide-title{font-size:clamp(20px,3.5vw,50px);font-weight:700;color:#fff;line-height:1.1;padding-bottom:45px}
 .slide-subtitle{font-size:clamp(19px,1.4vw,23px);color:#fff;font-weight:500;line-height:1.1;padding-bottom:45px;width:75%}
 .main-btn{display:inline-block}
-.main-btn a{color:#fff;font-size:clamp(17px,1.4vw,17px);font-weight:500;text-decoration:none;background:#008ed3;padding:10px 25px}
+.main-btn a{ color: #fff;
+  font-size: clamp(17px,1.4vw,17px);
+  font-weight: 500;
+  text-decoration: none;
+  background: #008ed3;
+  padding: 10px 25px;
+  overflow: hidden;
+  position: relative; 
+    z-index: 0;     
+    display: inline-block;
+  transition: all 0.5s ease; 
+}
+.main-btn a::before {
+  content: '';
+  position: absolute;
+  top: -50%;
+  left: -50%;
+  width: 200%;
+  height: 200%;
+  background: repeating-linear-gradient(
+    45deg,
+    #e85e5a,
+    #e85e5a 10px,
+    #f07a77 10px,
+    #f07a77 20px
+  );
+  transform: rotate(0deg) scale(0);
+  transition: transform 0.8s ease;
+  z-index: -1;
+}
+.main-btn:not(.no-hover) a:hover::before {
+  transform: rotate(10deg) scale(1);
+  animation: moveLines 3s linear infinite;
+}
+
+@keyframes moveLines {
+  0% { background-position: 0 0; }
+  100% { background-position: 60px 0; } 
+}
+
 .swiper-horizontal>.swiper-pagination-bullets,.swiper-pagination-bullets.swiper-pagination-horizontal,.swiper-pagination-custom,.swiper-pagination-fraction{bottom:var(--swiper-pagination-bottom,145px);top:var(--swiper-pagination-top,auto);left:0;width:100%;text-align:left}
 .swiper-pagination-bullet{width:20px;height:20px;display:inline-block;border-radius:var(--swiper-pagination-bullet-border-radius,50%);background:#fff;opacity:1}
 .swiper-pagination-bullet-active{opacity:1;background:#fbe943}
@@ -35,10 +74,10 @@ nav.navbar{background:#414042;height:115px;position:fixed;width:100%;top:0;left:
 a.navbar-brand img{width:310px}
 .navbar .dropdown-toggle::after{display:none!important}
 a.nav-link.dropdown-toggle svg{bottom:2px;position:relative}
-.nav-link.active,a.nav-link{color:#fff!important;font-size:17px;font-weight:700;text-transform: uppercase;}
+.nav-link.active,a.nav-link{color:#fff!important;font-size:17px;font-weight:700;text-transform:uppercase}
 li.nav-item{padding:0 5px}
 .dropdown:hover .dropdown-menu{background:#414042}
-a.dropdown-item{color:#fff;text-align:center;font-size:15px;font-weight:700;text-transform: uppercase;}
+a.dropdown-item{color:#fff;text-align:center;font-size:15px;font-weight:700;text-transform:uppercase}
 .dropdown-item.active,.dropdown-item:active{color:#fff;text-decoration:none;background-color:transparent}
 footer .container-lg{padding-top:100px;padding-bottom:40px}
 footer{background-color:#3b3838;color:#fff}
@@ -150,6 +189,7 @@ section.media-cn{padding-bottom:135px;background-image:url(../images/media-bg.pn
 @media screen and (max-width:1680px){
 footer a{font-size:17px}
 .datasheet-cn .footer-title{margin-bottom:24px}
+li.nav-item{padding:0 3px}
 footer .footer-title{margin-bottom:48px}
 .footer-logo-cn{padding-bottom:100px}
 .footer-bottom{margin-top:65px}
@@ -184,12 +224,13 @@ a.dropdown-item{font-size:16px}
 section.sustainability-cn{padding-bottom:85px}
 .media-mg-inner img{height:435px}
 .blog-theme-left{position:absolute;left:-35px;bottom:-25px}
+li.nav-item{padding:0 4px}
 .sustainability-mg img{width:85%;height:auto}
 .sustainability-mg{text-align:center}
 }
 @media screen and (max-width:1024px) and (min-width:1000px){
 a.navbar-brand img{width:220px}
-.navbar-expand-lg .navbar-nav .nav-link{padding-left: 0; padding-right: 0;}
+.navbar-expand-lg .navbar-nav .nav-link{padding-left:0;padding-right:0}
 li.nav-item{padding:0 7px}
 .nav-link.active,a.nav-link{font-size:14px}
 a.dropdown-item{font-size:15px}
@@ -218,9 +259,14 @@ section.about{padding-top:70px;padding-bottom:50px}
 .media-mg-inner img{height:380px}
 }
 @media screen and (max-width:900px){
+   .navbar-nav .dropdown-menu{padding-top: 0;}
+   .nav-link{padding-bottom: 15px;}
+    a.nav-link{text-align: right;}
+    a.dropdown-item{text-align: right;}
 nav.navbar{height:auto;padding:20px 10px;position:fixed;width:100%;top:0;left:0}
 a.navbar-brand img{width:260px}
 ul.navbar-nav{text-align:center}
+a.dropdown-item{font-size:15px}
 .slide-mg,.swiper{height:55vh}
 .main-btn a{font-size:15px;padding:10px 8px}
 .swiper-horizontal>.swiper-pagination-bullets,.swiper-pagination-bullets.swiper-pagination-horizontal,.swiper-pagination-custom,.swiper-pagination-fraction{bottom:var(--swiper-pagination-bottom,88px);text-align:center}
@@ -240,7 +286,7 @@ footer a{font-size:16px}
 .slide-info{text-align:center}
 .slide-title{font-size:31px}
 .slide-subtitle{width:100%}
-.dropdown-menu{border:1px solid #fff}
+.dropdown-menu{border:0px solid #fff}
 .footer-links-wrapper{display:none;flex-direction:column;padding-top:10px}
 .footer-links-wrapper.show{display:flex}
 .toggle-icon{font-size:16px;cursor:pointer;transition:transform .3s;display:block;position:relative;left:6px;bottom:2px}
@@ -279,13 +325,16 @@ a.nav-link.dropdown-toggle svg{transition:transform .3s}
 a.nav-link.dropdown-toggle svg{bottom:2px;left:5px}
 }
 @media screen and (max-width:650px){
+ .footer-toggle{justify-content:center !important}
 a.navbar-brand img{width:180px}
 .footer-logo-cn{text-align:center}
 footer .main-btn{margin-bottom:25px}
+.footer-links{text-align: center;}
 .footer-logo{max-width:70%}
 footer .container-lg{padding-top:40px;padding-bottom:0}
 .footer-bottom{font-size:13px;margin-top:15px;padding-bottom:8px;text-align:center}
 .footer-social{padding-bottom:20px}
+.footer-call,.footer-social{justify-content: space-around;}
 .mb-4.footer-section{margin-bottom:1rem!important}
 .slide-mg,.swiper{height:67vh}
 .order-res-1{order:1}
@@ -324,4 +373,23 @@ section.media-cn{background-size:cover;padding-bottom:0}
 @media screen and (max-width:320px){
 .slide-mg,.swiper{height:95vh}
 .row-ss-cols-2>*{flex:0 0 auto;width:50%}
+.footer-toggle{justify-content: start !important;}
+.footer-links{text-align: start;}
+}
+@media screen and (max-width:1400px) and (min-width:1025px){
+.navbar-expand-lg .navbar-nav .nav-link{padding-right:0;padding-left:10px}
+.nav-link.active,a.nav-link{font-size:15px}
+a.dropdown-item{font-size:14px}
+nav.navbar{height:95px}
+main{padding-top:90px!important}
+footer .footer-title{font-size:18px}
+footer a{font-size:16px}
+.footer-phone{font-size:17px}
+.footer-label{font-size:17px}
+.media-mg-inner img{height:380px}
+section.media-cn{padding-bottom:150px}
+.main-title{font-size:34px}
+.sub-title{font-size:27px}
+.paragraph{font-size:16px}
+.sustainability-content{background-size:contain}
 }
